<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:liftOnScroll="true" >

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:menu="@menu/toolbar_add_edit_reminder"
                app:navigationIcon="@drawable/ic_close"
                tools:title="Add reminder"
                style="@style/Widget.MaterialComponents.Toolbar.Primary">

            </com.google.android.material.appbar.MaterialToolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:id="@+id/add_edit_scroll_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="?attr/actionBarSize">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:paddingBottom="24dp"
                tools:context=".fragments.AddEditReminderFragment">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/name_label"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp"
                    app:hintEnabled="false"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/name_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_reminder_name"
                        android:imeOptions="actionDone"
                        android:inputType="textAutoComplete"
                        android:maxLength="200"
                        android:paddingStart="0dp"
                        android:paddingEnd="0dp"
                        android:paddingBottom="8dp"
                        android:singleLine="true"
                        android:textColorHint="@color/subtitle_grey"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/start_date_icon"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_calendar"
                    app:layout_constraintBottom_toBottomOf="@+id/start_date_label"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/name_label" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/start_date_label"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp"
                    app:hintEnabled="false"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/start_date_icon"
                    app:layout_constraintTop_toBottomOf="@+id/name_label">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/start_date_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="false"
                        android:cursorVisible="false"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:inputType="none"
                        android:textSize="18sp"
                        tools:text="Fri, 17 Jun 2024" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/start_time_icon"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_clock"
                    app:layout_constraintBottom_toBottomOf="@+id/start_time_label"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/start_date_label" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/start_time_label"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp"
                    app:hintEnabled="false"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/start_time_icon"
                    app:layout_constraintTop_toBottomOf="@+id/start_date_label">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/start_time_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="false"
                        android:cursorVisible="false"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:textSize="18sp"
                        tools:text="16:30" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/notes_icon"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginTop="18dp"
                    android:src="@drawable/ic_notes"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/notes_label" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/notes_label"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp"
                    app:hintEnabled="false"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/notes_icon"
                    app:layout_constraintTop_toBottomOf="@+id/start_time_label">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/notes_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_reminder_notes"
                        android:maxLength="10000"
                        android:textColorHint="@color/subtitle_grey"
                        android:textSize="18sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/notification_icon"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_notification"
                    app:layout_constraintBottom_toBottomOf="@+id/notification_header"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/notification_header" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/notification_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="12dp"
                    android:text="@string/title_send_notification"
                    android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
                    android:textSize="18sp"
                    app:layout_constraintStart_toEndOf="@+id/notification_icon"
                    app:layout_constraintTop_toBottomOf="@+id/notes_label" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/notification_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="@+id/notification_header"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/notification_header"
                    tools:checked="false" />

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/repeat_icon"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_repeat"
                    app:layout_constraintBottom_toBottomOf="@+id/repeat_header"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/repeat_header" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/repeat_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="28dp"
                    android:text="@string/title_repeat_reminder"
                    android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
                    android:textSize="18sp"
                    app:layout_constraintStart_toEndOf="@+id/repeat_icon"
                    app:layout_constraintTop_toBottomOf="@+id/notification_header" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/repeat_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="@+id/repeat_header"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/repeat_header"
                    tools:checked="true" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/materialTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/repeats_every_header"
                    android:textColor="@color/subtitle_grey"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="@+id/repeat_value_label"
                    app:layout_constraintTop_toBottomOf="@+id/repeat_header"
                    app:showIfRepeatChecked="@{repeatSwitch.checked}" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/repeat_value_label"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/materialTextView"
                    app:showIfRepeatChecked="@{repeatSwitch.checked}">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/repeat_value_input"
                        android:layout_width="wrap_content"
                        android:layout_height="55dp"
                        android:gravity="center"
                        android:inputType="number"
                        android:maxLength="2"
                        tools:text="2" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/repeat_unit_label"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    app:layout_constraintBottom_toBottomOf="@+id/repeat_value_label"
                    app:layout_constraintStart_toEndOf="@+id/repeat_value_label"
                    app:layout_constraintTop_toTopOf="@+id/repeat_value_label"
                    app:showIfRepeatChecked="@{repeatSwitch.checked}"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu" >

                    <AutoCompleteTextView
                        android:id="@+id/repeat_unit_input"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="none"
                        tools:ignore="LabelFor"
                        tools:text="day" />

                </com.google.android.material.textfield.TextInputLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>