...

    <!-- Add / edit reminder -->
    <string name="hint_reminder_name">RemindMe to…</string>
    <string name="cd_date_icon">Date</string>
    <string name="cd_time_icon">Time</string>
    <string name="cd_notes_icon">Notes</string>
    <string name="hint_reminder_notes">Add notes</string>
    <string name="input_chip_notification_on">Notification on</string>
    <string name="input_chip_no_notification">No notification</string>
    <string name="input_chip_no_repeat">No repeat</string>
    <string name="button_save_reminder">Save</string>

    <plurals name="repeat_interval_days">
...
    <string name="dialog_title_sort">Sort reminders by</string>
    <string name="date_earliest">Date - Earliest first</string>
    <string name="date_latest">Date - Latest first</string>
    <string name="alphabetical_a_to_z">Alphabetical A-Z</string>
    <string name="alphabetical_z_to_a">Alphabetical Z-A</string>

    <string name="dialog_title_repeat_interval">Repeats every</string>
    <string name="repeat_unit_option_day">Day(s)</string>
    <string name="repeat_unit_option_week">Week(s)</string>

    <string name="dialog_title_app_theme">Set app theme</string>
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
...
